  temporary map arrow to each one in turn.  Each property location has a unique
  two-word name assigned so that you can keep track of which property you're
  trying to move toward.  Upon inheriting a property, this same name is also
  displayed.  Thanks Cordy.  Fixes #800

--Unique two-word name is displayed when you finish constructing a property
  fence.



Version 371    2023-05-19

--Fixed so that actor-to-newTarget numUses pass-through only happens if they
  have the same numUses AND the same useChance.  This was causing a bug when
  partially-used skewer (with 4 uses) was producing less rubber dough in the
  resulting bucket (4 uses) than expected.  Also fixed the same issue with
  target-to-newActor numUses pass-through, though it wasn't currently
  affecting any transitions.  Fixes #746  Fixes jasonrohrer/OneLifeData7#874

--165 added to list of possible monitor refresh rates.  Fixes #771

--Fixed so that there's no longer a 500-character limit to the idString when
  parsing a MAP_CHANGE (MX) message in the client.  A delivery truck full of
  backpacks full of bananas was surpassing this limit, causing glitches.
  Part of #784

--Fixed so that there's no longer a 499-character limit on the holdingIDString
  and the clothingString when parsing a PLAYER_UPDATE (PU) message in the
  client.  If the player picked up a delivery truck full of backpacks full of
  bananas, the 499-character limit was surpassed, causing glitches that led to
  a disconnect.  We never had any examples of the clothingString limit being a
  problem, but I fixed that in the same way.  Thanks D-rey-a.  Fixes #784

--Fixed so that client parsing of global server messages (MS) aren't limited
  to 199 characters in length.



Server Fixes

--Indoor bonus fades over 10 seconds (instead of instantly) when door is opened
  or player otherwise leaves indoors.  Thanks Arcurus.  Fixes #729

--Fixed so that disabled tool slot feature doesn't suddenly come into play
  after apocalypse.  Fixes #741
